@@ -100,6 +100,8 @@
     * bulk operations now also available when checkboxes are off
     * LDAP: Added test to validate the configured role sync groups
     * Disabled replication type "peer" in site editor.
+    * Added "permanently ignore" button to inventory services dialog which 
+      links directly to the disabled services view
     * FIX: correct display of number of hosts in bulk inventory
     * FIX: nailed down ".siteid" exception when added new site
     * FIX: fixed setting for locking mode from 'ait' to 'wait'
